# chess_ai_2

./: .gitignore  last_count_2400.md  pyproject.toml
chess_ai/: chess_ai.ipynb  data_for_train_prepare.py  download.sh  games_to_matrices.py  games_to_matrices_numpy.py  load_saved.py  matrices_to_games.py  model.py  model_initialize.py  numpy_to_tensor.py  train.py  use_model.py
test/: test_board_conversion.py  test_knight.py  test_promotion.py  test_queen.py
